<resources>
    <string name="app_name">Your Notes</string>
    <string name="action_settings">Settings</string>
    <string name="notes_content">Note\'s Content</string>

    <string name="createnotes_title">Type your note\'s title here</string>
    <string name="createnotes_content">Type your note\'s content here</string>
    <string name="notes_title">Note\'s Title</string>
    <string name="createnotes_button">Create Note</string>
    <string name="upload_photo_here">Touch photo to upload a new one</string>
    <string name="notification">Welcome to YourNotes! Let\'s get started!</string>
    <string name="change_language">Change Language</string>
    <string name="notes">Notes</string>
    <string name="gallery">Gallery</string>
    <string name="graphic_notes">Graphic Notes</string>
    <string name="cannot_create_note">Please fill all of the sections above</string>
    <string name="easter_egg">Easter Egg</string>
    <string name="todays_weather">Today\'s weather in Jakarta:</string>
    <string name="to_do_list">To-Do List</string>
    <string name="play_video">Click for a Surprise</string>
    <string name="fact_tab">Facts</string>
    <string name="created">Note Created</string>
    <string name="permission_needed">Permission to access the external storage is needed</string>
    <string name="permission">Permission Needed</string>
    <string name="denied">Permission denied</string>
    <string name="enable">Enable Wi-Fi</string>
    <string name="need_wifi">Wi-Fi Required</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="mandatory">YourNotes requires internet connection to run, please turn on the wifi connection.</string>
    <string name="play_music">Play Music</string>
    <string name="stop_music">Stop Music</string>
    <string name="played">Music Played</string>
    <string name="stopped">Music Stopped</string>
    <string name="random_fact">Random Fact</string>
    <string name="recurring_notif">Have you written in YourNotes today?</string>
    <string name="tap_here">Tap here to open YourNotes and write your own note.</string>
</resources>
