<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/change_language"
                android:icon="@drawable/ic_language"
                android:title="@string/change_language"/>
        <item
                android:id="@+id/menu_note"
                android:icon="@drawable/ic_event_note"
                android:title="@string/notes"/>
        <item
                android:id="@+id/gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/gallery"/>
        <item
                android:id="@+id/draw_notes"
                android:icon="@drawable/ic_scribble"
                android:title="@string/graphic_notes"/>
    </group>

</menu>